--- a/src/Components/Layout/Footer.css
+++ b/src/Components/Layout/Footer.css
@@ -9,4 +9,7 @@
   display: flex;
   padding: 0 5%;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+  flex-direction: row;
+  display: flex;
+  align-items: center;
 }
